ピクセルで表示するように

--- a/sand_sandbox/index.html
+++ b/sand_sandbox/index.html
@@ -28,6 +28,7 @@
 		mainCanvas.height = height
 		mainCanvas.style.width = (width / devicePixelRatio) + 'px'
 		mainCanvas.style.height = (height / devicePixelRatio) + 'px'
+		mainCanvas.style.imageRendering = 'pixelated'
 
 		class Block {
 			constructor(field, x, y) {
