--- a/sand_sandbox/index.html
+++ b/sand_sandbox/index.html
@@ -35,7 +35,7 @@
 				this.field = field
 				this.x = x
 				this.y = y
-				this.color = '#ff0000'
+				this.color = 'black'
 			}
 			moveTo(x, y) {
 				this.field.setTile(this.x, this.y, 0)
