--- a/sand_sandbox/index.html
+++ b/sand_sandbox/index.html
@@ -53,6 +53,19 @@
 				}
 
 				if (!this.field.isTileFilled(this.x, this.y - 1)) {
+					if (Math.random() > 0.05) {
+						return
+					}
+					const candidatePosition = [
+						[this.x - 1, this.y],
+						[this.x + 1, this.y],
+					]
+					const movablePosition = candidatePosition.filter(([x, y]) => !this.field.isTileFilled(x, y))
+					if (movablePosition.length === 0) {
+						return
+					}
+					this.moveTo(...randomFromArray(movablePosition))
+
 					return
 				}
 
@@ -111,7 +124,12 @@
 					const pointerX = Math.floor(pointerState.x / blockPerPixel * devicePixelRatio)
 					const pointerY = Math.floor(pointerState.y / blockPerPixel * devicePixelRatio)
 
-					field.setTile(pointerX, pointerY, new Block(field, pointerX, pointerY))
+					const size = 2
+					for (let x = -(size / 2); x <= size / 2; x++) {
+						for (let y = 0; y <= size; y++) {
+							this.setTile(x + pointerX, y + pointerY, new Block(this, x + pointerX, y + pointerY))
+						}
+					}
 				}
 
 				this.data.forEach((line, y) => {
